# Schematic-Mesher

./: .gitignore  Cargo.toml  README.md  todo.md
docs/: animated-textures.md  architecture.md  entity-models.md  lighting.md  liquid-rendering.md  particles.md
examples/: animated_scene.rs  benchmark.rs  debug_scene.rs  entity_scene.rs  lighting_scene.rs  liquid_scene.rs  mesh_schematic.rs  redstone_scene.rs  test_all_blocks.rs  test_greedy.rs
examples/skins/: nano.b64  purplers.b64  sloimay.b64
src/: error.rs  lib.rs  mesh_output.rs  wasm.rs
src/atlas/: builder.rs  mod.rs
src/export/: gltf.rs  mod.rs  obj.rs  raw.rs  usd.rs
src/mesher/: element.rs  entity.rs  face_culler.rs  geometry.rs  greedy.rs  lighting.rs  liquid.rs  mod.rs  tint.rs
src/mesher/entity/: armor_stand.rs  banner.rs  bat.rs  bed.rs  bell.rs  boat.rs  book.rs  cat.rs  chest.rs  chicken.rs  cow.rs  decorated_pot.rs  enderman.rs  equipment.rs  hanging_sign.rs  horse.rs  inventory.rs  iron_golem.rs  item_frame.rs  item_render.rs  minecart.rs  mob.rs  mod.rs  particle.rs  player.rs  sheep.rs  shulker.rs  sign.rs  sign_text.rs  skull.rs  slime.rs  spider.rs  villager.rs  villager_texture.rs  wolf.rs
src/resolver/: mod.rs  model_resolver.rs  multipart.rs  state_resolver.rs
src/resource_pack/: blockstate.rs  loader.rs  mod.rs  model.rs  texture.rs
src/types/: direction.rs  mod.rs  transform.rs
tests/: atlas_uv_regression.rs
tools/: package.json  serve.sh  server.ts  viewer.html
web/: index.html  package.json  server.ts
